Fix dark mode css for comments section

--- a/portfolio/src/main/webapp/dark-mode.css
+++ b/portfolio/src/main/webapp/dark-mode.css
@@ -3,7 +3,7 @@
     color: rgba(238, 238, 238, 0.9);
 }
 
-[data-theme="dark"] #about-me .card, [data-theme="dark"] .blog-card-body, [data-theme="dark"] #projects .card, [data-theme="dark"] #gallery .card {
+[data-theme="dark"] #about-me .card, [data-theme="dark"] #comments .card, [data-theme="dark"] .blog-card-body, [data-theme="dark"] #projects .card, [data-theme="dark"] #gallery .card {
     background-color: rgb(33, 33, 33);
 }
 
@@ -11,7 +11,7 @@
     border: 1.5px solid #121212;
 }
 
-[data-theme="dark"] .card-text, [data-theme="dark"] .blog-card-body, [data-theme="dark"] .text-link, [data-theme="dark"] ul {
+[data-theme="dark"] .card-text, [data-theme="dark"] .blog-card-body, [data-theme="dark"] .text-link, [data-theme="dark"] ul, [data-theme="dark"] #comments-card .card-body {
     color: rgba(238, 238, 238, 0.8);
 }
 
